fixed footer z-index bug

--- a/src/universal-search.less
+++ b/src/universal-search.less
@@ -184,18 +184,23 @@
         }
       }
       .modal-error {
+        position: relative;
         float: left;
         vertical-align: middle;
         line-height: 50px;
         font-size: 13px;
+        z-index: 1;
       }
       .modal-metadata {
+        position: relative;
         float: left;
         vertical-align: middle;
         line-height: 50px;
         font-size: 13px;
+        z-index: 1;
       }
       .nav {
+        position: relative;
         display: block;
         float: right;
         vertical-align: middle;
@@ -204,6 +209,7 @@
         line-height: 50px;
         color: @grey-color;
         cursor: pointer;
+        z-index: 1;
         
         &:hover {
           color: @black;
